--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,14 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-amazon:
+amazon_dev:
+  access_key_id: "<%= Rails.application.credentials.aws[:access_key_id] %>"
+  bucket: "<%= Rails.application.credentials.aws[:bucket] %>"
+  region: "<%= Rails.application.credentials.aws[:region] %>"
+  secret_access_key: "<%= Rails.application.credentials.aws[:secret_access_key] %>"
   service: S3
-  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID']%>
-  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY']
-  region: us-east-1
-  bucket: <%= ENV['AWS_BUCKET'] %>
+
+# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
